<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="default_notification_channel_id">Mensaje de texto</string>
    <string name="default_notification_channel_description">Canal para mensajes de texto</string>
    <string name="app_name">Wide Room</string>
    <string name="app_name_upper">WIDE ROOM</string>
    <string name="dev_by">Developed by Recarte and Inés</string>
    <string name="username">Username</string>
    <string name="write_msg">Write message here</string>
    <string name="event_name">Event name</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="sub_event">Subscribe event</string>
    <string name="search_user_event">Search for users</string>
    <string name="filter_event">Filter Events</string>
    <string name="cat">Category</string>
    <string name="distance">Distance</string>
    <string name="_km">100 Km</string>
    <string name="order">Order</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rmmbr_pswd">Can\'t remember your password?</string>
    <string name="no_account">Don\'t have an account? Register here</string>
    <string name="login">LOG IN</string>
    <string name="use_phone">Use Phone</string>
    <string name="use_google">Use Google</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="sent_otp">Enter OTP sent to your phone number</string>
    <string name="otp">OTP</string>
    <string name="next">NEXT</string>
    <string name="resent_otp">Resend OTP in 30 secs</string>
    <string name="ent_num">Enter mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="ent_user">Enter your username</string>
    <string name="ent_new_cred">Enter new credentials</string>
    <string name="confirm_pswd">Confirm password</string>
    <string name="search_user">Search User</string>
    <string name="city">City</string>
    <string name="bio">Bio</string>
    <string name="update_profile">Update profile</string>
    <string name="logout">Logout</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="zero">0</string>
    <string name="time">00:00</string>
    <string name="request">Request</string>
    <string name="events">Events</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="date_time">00/00/0000 00:00</string>
    <string name="_km2">(-1 Km)</string>
    <string name="advertiser">Please note that by subscribing to the event, other subscribed users will be able to see your profile information and know where and when you will be located.</string>
    <string name="access">Email or Phone</string>
    <string name="no_events_category">There are no events for this category</string>
    <string name="pwd_6">Password must be at least 6</string>
    <string name="fill_all">Please fill in all fields</string>
    <string name="vrf_email_sent">Verification email sent</string>
    <string name="error_email_send">Error trying to send verification email</string>
    <string name="error_register">Error trying to register</string>
    <string name="invalid_username">Invalid username</string>
    <string name="error_username">Username length should be at least 3 chars</string>
    <string name="update_ok">Updated successfully</string>
    <string name="update_ko">Updated failed</string>
    <string name="phone_ko">Phone number not valid</string>
    <string name="otp_ko">OTP verification failed</string>
    <string name="otp_ok">OTP sent successfully</string>
    <string name="login_ko">Error trying to Log in</string>
    <string name="email_ok">Email sent</string>
    <string name="email_ko">Error trying to send email</string>
    <string name="invalid_eventname">Invalid event name</string>
    <string name="unsuscribe">Unsubscribe</string>
    <string name="suscribe">Subscribe event</string>
    <string name="requested">Requested</string>
    <string name="friend_request_notification"> has sent you a new friend request!</string>
    <string name="delete_friend">Delete friend</string>
    <string name="friend_request_accepted"> has accepted your friend request!</string>
    <string name="no_results_found">Nothing to see here at the moment!</string>
    <string name="username_error">Username must have more than 3 characters</string>
    <string name="declined">Declined</string>
    <string name="accepted">Accepted</string>
</resources>
