<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_text_rounded_corner"
    android:backgroundTint="?attr/colorOnSecondary"
    android:outlineAmbientShadowColor="?attr/colorOnPrimary"
    android:layout_margin="10dp"
    android:elevation="2dp"
    android:orientation="horizontal"
    android:padding="10dp">
    <include layout="@layout/profile_pic_view"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/user_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/user_bio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/accept_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:background="@drawable/btn_rounded_corner"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:drawableEnd="@drawable/check_icon" />
            <Button
                android:id="@+id/reject_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/reject"
                android:background="@drawable/btn_rounded_corner"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:drawableEnd="@drawable/cross_icon"
                android:layout_marginStart="10dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>