<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/circular_bg"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/person_icon"
        android:scaleType="centerCrop"
        android:layout_marginBottom="40dp"
        android:id="@+id/event_background_pic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:backgroundTint="?attr/colorOnSecondary"
        android:foregroundTint="?attr/colorOnPrimary"
        android:outlineAmbientShadowColor="?attr/colorOnPrimary"
        android:elevation="5dp"
        android:id="@+id/profile_username"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:backgroundTint="?attr/colorOnSecondary"
        android:elevation="5dp"
        android:foregroundTint="?attr/colorOnPrimary"
        android:gravity="top"
        android:hint="@string/bio"
        android:inputType="text|textShortMessage|textAutoCorrect|textMultiLine"
        android:outlineAmbientShadowColor="?attr/colorOnPrimary"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:layout_margin="10dp"
        android:text="@string/access"
        android:textStyle="bold"
        android:foregroundTint="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorOnSecondary"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorOnSecondary"
        android:drawablePadding="8dp"
        android:drawableTint="?attr/colorOnPrimary"
        android:foregroundTint="?attr/colorOnPrimary"
        android:layout_margin="10dp"
        android:text="@string/access" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/update_profile"
            android:textColor="@color/white"
            android:id="@+id/profile_update_btn"/>
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primary"
            android:layout_gravity="center"
            android:id="@+id/profile_progress_bar"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout_btn"/>

</LinearLayout>