<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_text_rounded_corner"
    android:backgroundTint="?attr/colorOnSecondary"
    android:outlineAmbientShadowColor="?attr/colorOnPrimary"
    android:layout_margin="10dp"
    android:elevation="2dp">
    <include layout="@layout/profile_pic_view"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/user_name_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/user_name_text"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:id="@+id/user_bio_text"/>
            <Button
                android:id="@+id/send_request_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_rounded_corner"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:drawableEnd="@drawable/friend_request_icon"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>