<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.SearchUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:padding="10dp"
        android:id="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_user"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/back_btn"/>

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/white"
            android:layout_centerVertical="true"
            android:id="@+id/back_btn"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp"
        android:id="@+id/search_user_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corner"
            android:layout_margin="10dp"
            android:hint="@string/username"
            android:backgroundTint="?attr/colorOnSecondary"
            android:foregroundTint="?attr/colorOnPrimary"
            android:outlineAmbientShadowColor="?attr/colorOnPrimary"
            android:padding="10dp"
            android:elevation="4dp"
            android:layout_toLeftOf="@id/search_user_btn"
            android:id="@+id/search_username_input"
            />
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_search"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="?attr/colorPrimary"
            android:padding="4dp"
            android:layout_margin="10dp"
            android:id="@+id/search_user_btn"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/no_results_found">
        <TextView
            android:id="@+id/no_results_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/no_results_found"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_below="@id/no_results_text"
            android:src="@drawable/icon_search"
            app:tint="?attr/colorPrimary"
            android:id="@+id/no_results_found_icon"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_user_layout">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/search_user_recycler_view"
            />
    </ScrollView>



</RelativeLayout>
